[package]
name = "dvdsrc2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
#vapoursynth4-rs = {version = "0.2.0"}
#vapoursynth4-sys = {version = "0.2.0"}
#vapoursynth4-rs = { path = "../../vapoursynth4-rs/vapoursynth4-rs" }
#vapoursynth4-sys = { path = "../../vapoursynth4-rs/vapoursynth4-sys" }
vapoursynth4-rs = {git = "https://github.com/jsaowji/vapoursynth4-rs",rev = "c01cf9cc88745199c75cbc73d8a956ef0223331d"}
vapoursynth4-sys = {git = "https://github.com/jsaowji/vapoursynth4-rs",rev = "c01cf9cc88745199c75cbc73d8a956ef0223331d" }
#vapoursynth4-rs = {git = "https://github.com/inflation/vapoursynth4-rs",rev = "cd0c1892d8fdd23f349126b524bced5b6fcd8bfa"}
#vapoursynth4-sys = {git = "https://github.com/inflation/vapoursynth4-rs",rev = "cd0c1892d8fdd23f349126b524bced5b6fcd8bfa" }
const-str = "0.5.6"
dvdsrccommon = { path = "../dvdsrccommon" }