[package]
name = "dvdsrc2"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
#vapoursynth4-rs = {version = "0.2.0"}
#vapoursynth4-sys = {version = "0.2.0"}
#vapoursynth4-rs = { path = "../../vapoursynth4-rs/vapoursynth4-rs" }
#vapoursynth4-sys = { path = "../../vapoursynth4-rs/vapoursynth4-sys" }
#vapoursynth4-rs = "0.4.0"
#vapoursynth4-sys = "0.3.1"
vapoursynth4-rs  = {git = "http://github.com/inflation/vapoursynth4-rs",rev = "5685213b75cef2c8ae3e49ed60c71cb7258bc1a5"}
vapoursynth4-sys = {git = "http://github.com/inflation/vapoursynth4-rs",rev = "5685213b75cef2c8ae3e49ed60c71cb7258bc1a5" }
const-str = "0.5.6"
dvdsrccommon = { path = "../dvdsrccommon" }