[package]
name = "dvdsrccommon"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
home = "0.5.5"
serde = "1.0.188"
serde_derive = "1.0.188"
#why this commit exactly ?
#bincode = { git = "https://github.com/bincode-org/bincode", rev = "08556caaa527ada2ae32cc847e2cafbeab9b30cb" }
serde_json = "1.0.107"
bincode = "2.0.0"

# arch linux ships libdvdread 7.0.0 which is broken for iso files
#vendored_libdvdread = { path = "../vendored_libdvdread", features = []}
vendored_libdvdread = { path = "../vendored_libdvdread" }
#libarchive2 = "*"


[build-dependencies]
#cc = "1.0"
pkg-config = "0.3.27"