[package]
name = "dvdsrccommon"
version = "0.3.0"
edition = "2021"
license = "gplv2"

[dependencies]
byteorder = "1.4.3"
home = "0.5.5"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
bincode = "2.0.0"

libdvdread-sys = { path = "../libdvdread-sys" }
liba52-sys = { path = "../liba52-sys" }
libmpeg2-sys = { path = "../libmpeg2-sys" }